src/test/ui/compile-fail-migration/isssue-38821.stderr
error[E0277]: the trait bound `<Col as Expression>::SqlType: NotNull` is not satisfied
  --> $DIR/isssue-38821.rs:33:17
   |
LL | #[derive(Debug, Copy, Clone)]
   |                 ^^^^ the trait `NotNull` is not implemented for `<Col as Expression>::SqlType`
   |
   = help: consider adding a `where <Col as Expression>::SqlType: NotNull` bound
   = note: required because of the requirements on the impl of `IntoNullable` for `<Col as Expression>::SqlType`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
